🚀 Created API to fetch a single article by slug and also added annotations to methods
