# app/Http/Resources/ArticleShowResource.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Resources;
 
+use Carbon\Carbon;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
@@ -14,6 +15,16 @@ class ArticleShowResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return  [
+            'id' => $this->id,
+            'source' => $this->source,
+            'slug' => $this->slug,
+            'title' => $this->title,
+            'url' => $this->url,
+            'category' => $this->category,
+            'contributor' => $this?->contributor,
+            'published_at' => Carbon::parse($this->published_at)->format('jS F, Y H:i'),
+            'content' => $this->content
+        ];
     }
 }
